--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,7 @@ tokio-tungstenite = "0.21"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 parking_lot = "0.12"
+
+[profile.release]
+lto = true
+codegen-units = 1
